** Release Notes

current
  * fixed cmtConfig lookup in prun with --athenaTag

0.5.56 (10/12/2015)
  * fixed pathena/prun to ignore local jobReport.*
  * added --eventPickWithGUID

0.5.55 (9/9/2015)
  * fixed pathena for --nEventsPerJob + --split

0.5.54 (8/13/2015)
  * fixed --nEventsPerJob in pathena for real data

0.5.53 (8/12/2015)
  * added TrigMC to getAthenaVer

0.5.52 (7/27/2015)
  * removed datri stuff

0.5.51 (7/14/2015)
  * fixed --memory in pathena/prun

0.5.50 (7/13/2015)
  * added --reusableSeconday

0.5.49 (5/24/2015)
  * synchronized --notSkipLog and --useLogAsInput in prun

0.5.48 (5/23/2015)
  * added --useLogAsInput to prun

0.5.47 (4/2/2015)
  * fixed --maxCpuCount in pathena/prun

0.5.46 (3/30/2015)
  * added a protection to pbook against too many input datasets

0.5.45 (3/24/2015)
  * changed pathena not to use DBR by default

0.5.44 (3/17/2015)
  * fixed --goodRunListXML to upload XML to correct node when sandbox is reused

0.5.43 (2/27/2015)
  * removed usage of local python from pbook
  * added finishTask to pbook

0.5.42 (12/19/2014)
  * added forceStaged to pathena

0.5.40 (12/11/2014)
  * added support for AtlasDerivation

0.5.39 (12/1/2014)
  * changed --loadXML to remove scopes for secondary datasets

0.5.38 (11/21/2014)
  * fixed --destSE to transfer log as well

0.5.37 (11/19/2014)
  * fixed mergeOutpu pathena to currectly setup Athena on WN
  * added --useRucio

0.5.36 (11/13/2014)
  * fixed pathena so that files in minDS/cavDS are reusable

0.5.35 (10/29/2014)
  * fixed jobO picking for G4sim

0.5.34 (10/29/2014)
  * fixed --inputFileList in pathena/prun

0.5.33 (10/27/2014)
  * added support for AthAnalysis
  * added --nJobs to pathena

0.5.32 (10/20/2014)
  * added --eventPickSkipDaTRI to pathena/prun
 
0.5.31 (10/17/2014)
  * fixed prun for GRL
  * added a protection against unicode to pbook

0.5.30 (10/2/2014)
  * fixed pathena for --minXYZ and --cavXYZ 

0.5.29 (9/29/2014)
  * added --forceDirectIO to pathena
